--- a/app/src/main/res/layout/activity_dia_entry_detail.xml
+++ b/app/src/main/res/layout/activity_dia_entry_detail.xml
@@ -9,6 +9,23 @@
     tools:context=".DiaEntryDetailActivity">
 
     <!--ToDO: change text to string res-->
+
+    <!--ToDo: One Name for Toolbar or Toolbar name changing to Entry Title-->
+    <!--Toolbar-->
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/dia_entry_detail_toolbar"
+        android:layout_width="0dp"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        android:elevation="4dp"
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:title="@string/title_activity_detail" />
+
+
     <!--TextView for Title-->
     <TextView
         android:id="@+id/textView_title"
@@ -19,11 +36,11 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
-        android:text="EntryTitle"
+        android:text="@string/dia_entry_detail_title"
         android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView_mood"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/dia_entry_detail_toolbar" />
 
     <!--Tags inside a LinearLayout wrapped in HorizontalScrollView -->
     <HorizontalScrollView
@@ -75,13 +92,13 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
 
+        android:layout_marginTop="8dp"
         android:contentDescription="@string/dia_entry_detail_moodDescription"
         android:src="@android:drawable/ic_delete"
         app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView_tags"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/dia_entry_detail_toolbar" />
 
     <!--Entry-->
     <TextView
@@ -135,6 +152,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView_timestamp"
         app:srcCompat="@drawable/stock_beach" />
-
 
 </android.support.constraint.ConstraintLayout>
