--- a/app/src/main/res/layout/activity_dia_entry_create.xml
+++ b/app/src/main/res/layout/activity_dia_entry_create.xml
@@ -11,9 +11,7 @@
         android:id="@+id/createDiaEntryTitleEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:hint="@string/diaEntryTitleEditTextHint"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -38,7 +36,7 @@
         android:layout_marginTop="8dp"
         android:hint="Wähle passende Tags aus."
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createDiaEntryTitleEditText" />
+        app:layout_constraintTop_toBottomOf="@+id/location_input" />
 
     <EditText
         android:id="@+id/createDiaEntryDescEditText"
@@ -91,5 +89,32 @@
         android:text="Eintrag erstellen"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
+        android:id="@+id/location_find_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/location_find_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/location_input"
+        app:layout_constraintTop_toBottomOf="@+id/imageButton_mood" />
+
+    <EditText
+        android:id="@+id/location_input"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:hint="@string/location_input"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/createDiaEntryTitleEditText" />
 
 </android.support.constraint.ConstraintLayout>
