--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,40 +19,27 @@
         app:title="@string/app_name" />
 
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <Button
+        <ListView
+            android:id="@+id/diaListView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
+
+        <android.support.design.widget.FloatingActionButton
             android:id="@+id/createBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="CREATE" />
+            android:layout_gravity="end|bottom"
+            android:layout_marginBottom="15dp"
+            android:layout_marginRight="15dp"
+            android:src="@android:drawable/ic_menu_add"
+            android:scaleType="center" />
+    </FrameLayout>
 
-        <Button
-            android:id="@+id/clearAllBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CLEAR ALL" />
 
-        <Button
-            android:id="@+id/clearFirstBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="CLEAR FIRST" />
-
-        <Button
-            android:id="@+id/updateFirstBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="UPDATE FIRST" />
-    </LinearLayout>
-
-    <ListView
-        android:id="@+id/diaListView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"></ListView>
 
 
 
