--- a/app/src/main/res/layout/dia_entry_overview_list.xml
+++ b/app/src/main/res/layout/dia_entry_overview_list.xml
@@ -3,14 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
     android:orientation="horizontal">
 
     <TextView
+        android:layout_margin="10dp"
         android:text="Name"
         android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="30sp"/>
 
     <TextView
         android:id="@+id/date"
