--- a/app/src/main/res/layout/activity_dia_entry_detail.xml
+++ b/app/src/main/res/layout/activity_dia_entry_detail.xml
@@ -49,9 +49,9 @@
         android:id="@+id/textView_timestamp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:text="10:52"
+        android:padding="5dp"
+        android:background="#FFFFFF"
+        android:text="13:37"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_entryImage"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -62,6 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
+        android:background="#FFFFFF"
+        android:padding="5dp"
         android:text="Regensburg"
         app:layout_constraintBottom_toBottomOf="@+id/imageView_entryImage"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -70,18 +72,18 @@
     <TextView
         android:id="@+id/textView_entryText"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="25dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="12dp"
         android:text="TestTestTest"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.03"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage"
-        android:textSize="18sp"/>
+        app:layout_constraintTop_toBottomOf="@+id/imageView_entryImage" />
 
 
 
