--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,7 +35,7 @@
             android:layout_gravity="end|bottom"
             android:layout_marginBottom="15dp"
             android:layout_marginRight="15dp"
-            android:src="@android:drawable/ic_menu_add"
+            android:src="@drawable/baseline_add_black_18dp"
             android:scaleType="center" />
     </FrameLayout>
 
